# cogniserve-openai-agents-streaming-fastapi

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: README.md
examples/: browser_example.html
src/api/: main.py
src/api/routers/: assistant.py  chat.py  research.py
src/api/utils/: agent_router.py  logging.py  session_utils.py
src/chat_agent/: main.py
src/cogniserve/: main.py
src/cogniserve/research_bot/: main.py  manager.py
src/cogniserve/research_bot/agents/: planner_agent.py  search_agent.py
src/cogniserve/routers/: chat.py  research.py
src/cogniserve/utils/: agent_router.py  logging.py
src/deep_research_agent/: __init__.py  config.py  mcp.py  models.py  orchestrator.py  tools.py
src/deep_research_agent/agents/: __init__.py  clarification_agent.py  compression_agent.py  final_report_agent.py  research_brief_agent.py  researcher_agent.py  supervisor_agent.py
src/research_bot/: manager.py
src/research_bot/agents/: writer_agent.py
