[project]
name = "cogniserve"
version = "0.1.0"
description = "A FastAPI backend for serving AI agents."
authors = [{name = "Muhammad Ahmad Shoukat", email = "ahmadshaukat_4@outlook.com"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.0",
    "openai-agents>=0.1.0",
    "uvicorn[standard]>=0.35.0",
]
